# cctv-motiond

./: CMakeLists.txt  Makefile  TODO  cctv-motion-detection.sh  cctv-motiond  delete-old-images.sh  find-motion-in-dir.sh  generate-motion-thumbs.sh  highlight-if-different.sh  imgdiff  imgdiff.cpp  imgdiff2.py  kill-cctv-motiond.sh
imgdiff-src/: brightness.cpp  brightness.h  exposure.cpp  exposure.h  imgdiff.cpp  imgdiff.h  imgdiff_main.cpp
py-src/: detect_motion.py  imgdiff.py  test_detect-motion.py
test/: hid_test.sh  imgdiff-test.py  imgdiff-test.sh
test/imgdiff-varying-exposure/: test-exposure-variations.py
